project/phase2/test/test_2_r06.out
Error type 5 at Line 9: unmatching type on both sides of assignment
Error type 6 at Line 10: rvalue appears on the left-side of assignment
