project/phase2/test/test_2_r06.spl
struct Apple
{
  int weight;
  float round;
};
int test_2_r05()
{
  struct Apple aa;
  aa.weight = 2.5;
  1.1 = aa.round;
  return 0;
}
